k8s/logging/efk-logging/08_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: efklog
  annotations: 
   cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
  - host:   kibana.foxcastor.com.ng
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: kibana-logging
            port:
              number: 5601
 tls:
  - hosts:
    - kibana.foxcastor.com.ng
    secretName: letsencrypt-prod-cert
